# ai-agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
docs/: system_card.md
evaluation/: test_set.json
prompts/: rag_system_v1.yaml  rag_system_v2.yaml
scripts/: fetch_sample_corpus.py
src/edadvisor/: __init__.py  config.py
src/edadvisor/evaluation/: runner.py
src/edadvisor/generation/: chain.py  citations.py  memory.py  prompts.py
src/edadvisor/ingestion/: chunkers.py  loaders.py  pipeline.py  store.py
src/edadvisor/retrieval/: retriever.py
src/edadvisor/serving/: app.py  schemas.py
tests/unit/: test_chunkers.py  test_citations.py  test_memory.py  test_retriever.py
ui/: app.py
